--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -46,7 +46,7 @@
     dynamic. Message the initiative blue money. Goalposts. Run it up the flag
     pole the right info at the right time to the right people this medium needs
     to be more dynamic re-inventing the wheel, so we need more paper circle back
-    root-and-branch review. Run it up the flag pole. Crisp ppt fast track . Net
+    root-and-branch review. Run it up the flag pole. Crisp ppt fast track. Net
     net do i have consent to record this meeting paddle on both sides let's
     unpack that later it's about managing expectations both the angel on my left
     shoulder and the devil on my right are eager to go to the next board meeting
@@ -67,7 +67,7 @@
     personal development. Going forward make it more corporate please. Create
     spaces to explore what’s next we have to leverage up the messaging so the
     horse is out of the barn but quarterly sales are at an all-time low can you
-    send me an invite?. Vertical integration create spaces to explore what’s
+    send me an invite? Vertical integration create spaces to explore what’s
     next, so due diligence fire up your browser we should leverage existing
     asserts that ladder up to the message and prethink, action item.</p>
 
